//// --------------------------------------------------------------------------------
//// DBML (Database Markup Language) Schema for Myanmar Sar Project
//// Generated by Gemini
//// You can paste this content into dbdiagram.io to visualize the database schema.
//// --------------------------------------------------------------------------------

//// --------------------------------------------------------------------------------
//// Table Definitions
//// --------------------------------------------------------------------------------

Table users {
  id bigint [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
}

Table roles {
  id bigint [pk, increment]
  name varchar(255) [unique, not null]
  created_at timestamp
  updated_at timestamp
}

// Pivot table for many-to-many relationship between users and roles
Table role_user {
  user_id bigint [pk]
  role_id bigint [pk]
}

Table tables {
  id bigint [pk, increment]
  table_number int [unique, not null]
  status varchar(255) [not null, default: 'available'] // e.g., 'available', 'occupied'
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [not null, note: 'The waiter who placed the order']
  table_number int
  status varchar(255) [not null, default: 'pending'] // e.g., 'pending', 'preparing', 'completed'
  total_price decimal(8, 2) [not null, default: 0.00]
  remark text
  created_at timestamp
  updated_at timestamp
}

Table food_items {
  id bigint [pk, increment]
  name varchar(255) [not null]
  price decimal(8, 2) [not null]
  description text
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null]
  food_item_id bigint [not null]
  quantity decimal(8, 2) [not null]
  price decimal(8, 2) [not null, note: 'Price of the item at the time of order']
  cost decimal(8, 2) [not null, note: 'Cost of the item at the time of order']
  status varchar(255) [not null, default: 'pending'] // e.g., 'pending', 'cooked', 'served'
  created_at timestamp
  updated_at timestamp
}

Table ingredients {
  id bigint [pk, increment]
  name varchar(255) [not null]
  unit varchar(255) [not null]
  quantity decimal(8, 2) [not null, default: 0]
  unit_price decimal(8, 2) [not null]
  created_at timestamp
  updated_at timestamp
}

// Pivot table for many-to-many relationship between food_items and ingredients (Recipe)
Table food_item_ingredient {
  food_item_id bigint [pk]
  ingredient_id bigint [pk]
  quantity double [not null]
}

Table table_bill_out_records {
  id bigint [pk, increment]
  user_id bigint [not null]
  table_id bigint [not null]
  order_id bigint [not null]
  total_money decimal(8, 2) [not null]
  billed_at timestamp [default: `now()`]
  created_at timestamp
  updated_at timestamp
}


//// --------------------------------------------------------------------------------
//// Relationship Definitions
//// --------------------------------------------------------------------------------

// Many-to-many relationship between users and roles
Ref: users.id < role_user.user_id
Ref: roles.id < role_user.role_id

// An Order is placed by one User (waiter)
Ref: users.id < orders.user_id

// An Order is associated with a Table.
// Note: This relationship is defined in Eloquent on non-primary keys.
Ref: tables.table_number < orders.table_number

// An Order has many OrderItems
Ref: orders.id < order_items.order_id

// An OrderItem refers to one FoodItem
Ref: food_items.id < order_items.food_item_id

// Many-to-many relationship between food_items and ingredients
Ref: food_items.id < food_item_ingredient.food_item_id
Ref: ingredients.id < food_item_ingredient.ingredient_id

// A Bill Out Record is created by a User
Ref: users.id < table_bill_out_records.user_id

// A Bill Out Record is for a specific Table
Ref: tables.id < table_bill_out_records.table_id

// A Bill Out Record is for a specific Order
Ref: orders.id < table_bill_out_records.order_id
